<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorAccent"/>
    <LinearLayout
        android:layout_marginTop="-50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/person_img"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maker_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/txtSecondary"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decription"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Github Profile"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/txtSecondary"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/maker_github_profile_name"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>