<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/material_bg_2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="TechFlow"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/txtPrimary"
                    android:gravity="center"/>

                <View
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_gradient"
                    android:layout_height="70dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="-60dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/grey_60"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/person_img"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:textSize="30sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/txtSecondary"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Version 1.0"
                    android:gravity="center" />
                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_description"
                    android:gravity="center"
                    android:textColor="@color/txtSecondary"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical">


                    <ImageButton
                        android:id="@+id/link_insta"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_instagram"
                        android:tint="@color/black"/>

                    <Button
                        android:id="@+id/link_github"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_rounded_accent"
                        android:drawableStart="@drawable/ic_github"
                        android:paddingStart="9dp"
                        android:drawablePadding="5dp"
                        android:text="Get Source code"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/grey_20"/>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="30dp"
                        android:tint="@color/black"
                        android:src="@drawable/ic_language"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/support_name"
                            android:textColor="@color/txtSecondary"
                            android:textSize="22sp"/>

                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/support_description"
                            android:textColor="@color/txtSecondary"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</android.support.design.widget.CoordinatorLayout>