<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <!-- 1st Raw -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/new_releases"
                android:textSize="20sp"
                android:textColor="@color/txtPrimary"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="0.2"
                android:textStyle="bold"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:layout_margin="2dp"
                android:text="@string/txt_more"
                android:backgroundTint="@android:color/transparent"
                android:focusable="true"
                android:selectAllOnFocus="true"
                android:textColor="@color/primaryGray"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="250dp">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/grayLight"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/grayLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/img_mountain"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Mountain"
                        android:textSize="20sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/txtPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/grayLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/img_eroded_granite"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Eroded Granite"
                        android:textSize="20sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/txtPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!-- 2nd Raw -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recommended"
                android:textSize="20sp"
                android:textColor="@color/txtPrimary"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="0.2"
                android:textStyle="bold"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:layout_margin="2dp"
                android:text="@string/txt_more"
                android:backgroundTint="@android:color/transparent"
                android:focusable="true"
                android:selectAllOnFocus="true"
                android:textColor="@color/primaryGray"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/grayLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/img_fox"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Fox"
                        android:textSize="20sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/txtPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/grayLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/img_flower"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Flower"
                        android:textSize="20sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/txtPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/grayLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/img_balcony"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Balcony"
                        android:textSize="20sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/txtPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!-- 3rd Raw -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/top_rated"
                android:textSize="20sp"
                android:textColor="@color/txtPrimary"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="0.2"
                android:textStyle="bold"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:layout_margin="2dp"
                android:text="@string/txt_more"
                android:backgroundTint="@android:color/transparent"
                android:focusable="true"
                android:selectAllOnFocus="true"
                android:textColor="@color/primaryGray"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="?attr/actionBarSize">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/grayLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/img_bird"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Bird"
                        android:textSize="20sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/txtPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/grayLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/img_island"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Island"
                        android:textSize="20sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"
                        android:textColor="@color/txtPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>